tests/e2e/explicit_cast_invalid2.error
Error: syntax error in story at line 1, column 16

1|    t = {} as List[time]
                     ^^^^

E0126: Type casting not supported from `Map[any,any]` to `List[time]`.
