tests/e2e/explicit_cast_invalid2.story
t = {} as List[time]
c = t as List[float]
